0.4
===
"more" in reply
New xsd describing collections
Work relations found using RIsearch
First try with correct work-collections
allObjects supported
cql to solr conversion

0.3
===
Data from Fedora object store
format rawData and dc

0.2
===
xsd in separate file and changed quite a bit
identifier in dc records

0.1
===
first version